--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,32 +1,2 @@
-[package]
-name = "kite"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-clap = { version = "4.5.20", features = ["derive"] }
-tokio = { version = "1", features = ["full"] }
-kube = { version = "0.96.0", features = ["runtime", "derive", "admission"] }
-kube-core = "0.96.0"
-k8s-openapi = { version = "0.23.0", features = ["latest"] }
-anyhow = "1.0.92"
-json-patch = "2"
-serde_json = "1.0.132"
-serde = "1.0.214"
-warp = { version = "0.3.7", features = ["tls"] }
-jsonptr = "0.4.7"
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
-tokio-serde = { version = "0.9.0", features = ["json", "serde", "serde_json"] }
-tokio-util = { version = "0.7.12", features = ["codec"] }
-
-[[bin]]
-name = "kite"
-
-[[bin]]
-name = "kite-init-container"
-path = "src/bin/init_container.rs"
-
-[[bin]]
-name = "kite-admission-webhook"
-path = "src/bin/admission_webhook.rs"
+[workspace]
+members = ["kite"]
