--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,25 @@
 [workspace]
-members = ["kite"]
+resolver = "2"
+members = ["kite", "kite-ebpf", "kite-ebpf-common"]
+default-members = ["kite", "kite-ebpf-common"]
+
+[workspace.dependencies]
+aya = { version = "0.13.0", default-features = false }
+aya-ebpf = { version = "0.1.1", default-features = false }
+aya-log = { version = "0.2.1", default-features = false }
+aya-log-ebpf = { version = "0.1.1", default-features = false }
+
+anyhow = { version = "1", default-features = false }
+cargo_metadata = { version = "0.18.0", default-features = false }
+which = { version = "6.0.0", default-features = false }
+libc = { version = "0.2.159", default-features = false }
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
+
+[profile.release.package.kite-ebpf]
+debug = 2
+codegen-units = 1
