--- a/kite/Cargo.toml
+++ b/kite/Cargo.toml
@@ -29,6 +29,7 @@ tokio-util = { version = "0.7.12", features = ["codec"] }
 which = {workspace = true}
 env_logger = "0.11.5"
 log = "0.4.22"
+num-traits = "0.2.19"
 
 [build-dependencies]
 cargo_metadata = { workspace = true }
