Split admission controller to its own workspace member

--- a/manifests/daemonset.yaml
+++ b/manifests/daemonset.yaml
@@ -48,8 +48,9 @@ spec:
       containers:
         - name: kite-daemon
           image: kite:dev
-          args:
+          command:
             - kite
+          # args:
             # - --label-selector=app=nginx
             # - --field-selector=metadata.namespace=default
           imagePullPolicy: IfNotPresent
