--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,34 @@
 [workspace]
 resolver = "2"
-members = ["kite", "kite-ebpf", "kite-ebpf-common"]
+members = ["kite", "kite-admit", "kite-ebpf", "kite-ebpf-common"]
 default-members = ["kite", "kite-ebpf-common"]
 
 [workspace.dependencies]
+clap = { version = "4.5.20", features = ["derive"] }
+
 aya = { version = "0.13.0", default-features = false }
 aya-ebpf = { version = "0.1.1", default-features = false }
 aya-log = { version = "0.2.1", default-features = false }
 aya-log-ebpf = { version = "0.1.1", default-features = false }
 
+tokio = { version = "1", features = ["full"] }
+tokio-serde = { version = "0.9.0", features = ["json", "serde", "serde_json"] }
+tokio-util = { version = "0.7.12", features = ["codec"] }
+
 anyhow = { version = "1", default-features = false }
 cargo_metadata = { version = "0.18.0", default-features = false }
 which = { version = "6.0.0", default-features = false }
 libc = { version = "0.2.159", default-features = false }
+
+kube = { version = "0.96.0", features = ["runtime", "derive", "admission"] }
+kube-core = "0.96.0"
+k8s-openapi = { version = "0.23.0", features = ["latest"] }
+
+serde_json = "1"
+serde = "1"
+
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 
 [profile.dev]
 panic = "abort"
