--- a/kite/Cargo.toml
+++ b/kite/Cargo.toml
@@ -6,27 +6,24 @@ edition = "2021"
 [dependencies]
 kite-ebpf-common = { path = "../kite-ebpf-common" }
 
-aya = {workspace = true}
-aya-log = {workspace = true}
+aya = { workspace = true }
+aya-log = { workspace = true }
 
 anyhow = { workspace = true, default-features = true }
 
-clap = { version = "4.5.20", features = ["derive"] }
-kube = { version = "0.96.0", features = ["runtime", "derive", "admission"] }
-kube-core = "0.96.0"
-k8s-openapi = { version = "0.23.0", features = ["latest"] }
-json-patch = "2"
-serde_json = "1.0.132"
-serde = "1.0.214"
-warp = { version = "0.3.7", features = ["tls"] }
-jsonptr = "0.4.7"
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+clap = { workspace = true }
+kube = { workspace = true }
+kube-core = { workspace = true }
+k8s-openapi = { workspace = true }
+serde_json = { workspace = true }
+serde = { workspace = true }
+tracing = {workspace = true}
+tracing-subscriber = {workspace = true}
 libc = { workspace = true }
-tokio = { version = "1", features = ["full"] }
-tokio-serde = { version = "0.9.0", features = ["json", "serde", "serde_json"] }
-tokio-util = { version = "0.7.12", features = ["codec"] }
-which = {workspace = true}
+tokio = { workspace = true }
+tokio-serde = { workspace = true }
+tokio-util = { workspace = true }
+which = { workspace = true }
 env_logger = "0.11.5"
 log = "0.4.22"
 num-traits = "0.2.19"
@@ -54,11 +51,6 @@ path = "src/main.rs"
 [[bin]]
 name = "kite-init-container"
 path = "src/bin/init_container.rs"
-
-[[bin]]
-name = "kite-admission-webhook"
-path = "src/bin/admission_webhook.rs"
-
 
 [[bin]]
 name = "kite-loader"
