--- a/manifests/admission_controller.yaml
+++ b/manifests/admission_controller.yaml
@@ -36,8 +36,9 @@ spec:
             limits:
               cpu: 100m
               memory: 100Mi
+          command:
+            - kite-admit
           args:
-            - kite-admission-webhook
             - --port=3030
             - --tls-cert=/etc/webhook/certs/tls.crt
             - --tls-key=/etc/webhook/certs/tls.key
