--- a/kite-k8s-admit/Cargo.toml
+++ b/kite-k8s-admit/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "kite-admit"
+name = "kite-k8s-admit"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-kite = { path = "../kite" }
 clap = { workspace = true }
 tokio = { workspace = true }
 tokio-serde = { workspace = true }
@@ -19,7 +18,8 @@ serde_json = { workspace = true }
 serde = { workspace = true }
 tracing = {workspace = true}
 tracing-subscriber = {workspace = true}
+serde_yaml = "0.9.34"
 
 [[bin]]
-name = "kite-admit"
+name = "kite-k8s-admit"
 path = "src/main.rs"
