--- a/manifests/admission_controller.yaml
+++ b/manifests/admission_controller.yaml
@@ -124,41 +124,42 @@ metadata:
   name: kite-admission-config
 data:
   config.yaml: |
-    selectors:
-      exclude:
-        matchLabels:
-          kite.io/no-patch: "true"
-    patches:
-      - op: add
-        path: /metadata/labels/kite.io~1patched
-        value: "true"
-      - op: add
-        path: /metadata/annotations/kite.io~1monitored
-        value: "true"
-      - op: add
-        path: /spec/volumes/-
-        value:
-          name: kite-socket
-          hostPath:
-            type: Socket
-            path: /var/run/kite/kite.sock
-      - op: add
-        path: /spec/initContainers/-
-        value:
-          name: kite
-          image: kite:dev
-          command: ["kite-init-container"]
-          volumeMounts:
-            - name: kite-socket
-              mountPath: /var/run/kite/kite.sock
-          env:
-            - name: KITE_POD_NAME
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.name
-            - name: KITE_POD_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
-            - name: KITE_SOCK
-              value: /var/run/kite/kite.sock
+    rules:
+    - selectors:
+        exclude:
+          matchLabels:
+            kite.io/no-patch: "true"
+      patches:
+        - op: add
+          path: /metadata/labels/kite.io~1patched
+          value: "true"
+        - op: add
+          path: /metadata/annotations/kite.io~1monitored
+          value: "true"
+        - op: add
+          path: /spec/volumes/-
+          value:
+            name: kite-socket
+            hostPath:
+              type: Socket
+              path: /var/run/kite/kite.sock
+        - op: add
+          path: /spec/initContainers/-
+          value:
+            name: kite
+            image: kite:dev
+            command: ["kite-init-container"]
+            volumeMounts:
+              - name: kite-socket
+                mountPath: /var/run/kite/kite.sock
+            env:
+              - name: KITE_POD_NAME
+                valueFrom:
+                  fieldRef:
+                    fieldPath: metadata.name
+              - name: KITE_POD_NAMESPACE
+                valueFrom:
+                  fieldRef:
+                    fieldPath: metadata.namespace
+              - name: KITE_SOCK
+                value: /var/run/kite/kite.sock
