Optionally auto inject app name label into deployments

--- a/manifests/admission_controller.yaml
+++ b/manifests/admission_controller.yaml
@@ -103,10 +103,12 @@ webhooks:
         path: /webhook
     rules:
       - apiGroups:
+          - "apps"
           - ""
         apiVersions:
           - "v1"
         resources:
+          - "deployments"
           - "pods"
         operations:
           - "CREATE"
