--- a/demo/nginx.yaml
+++ b/demo/nginx.yaml
@@ -1,22 +1,31 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: webserver
+  name: nginx
   labels:
-    app: webserver
+    app: nginx
 spec:
-  containers:
-  - name: webserver
-    image: nginx
-    ports:
-    - containerPort: 80
-    volumeMounts:
-    - name: web-content
-      mountPath: /usr/share/nginx/html
-  volumes:
-  - name: web-content
-    configMap:
-      name: web-content
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+        - containerPort: 80
+        volumeMounts:
+        - name: web-content
+          mountPath: /usr/share/nginx/html
+      volumes:
+      - name: web-content
+        configMap:
+          name: web-content
 
 ---
 apiVersion: v1
