--- a/demo/nginx.yaml
+++ b/demo/nginx.yaml
@@ -3,16 +3,16 @@ kind: Deployment
 metadata:
   name: nginx
   labels:
-    app: nginx
+    app: webserver
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: webserver
   template:
     metadata:
       labels:
-        app: nginx
+        app: webserver
     spec:
       containers:
       - name: nginx
