--- a/kite/Cargo.toml
+++ b/kite/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-kite-ebpf-common = { path = "../kite-ebpf-common" }
+kite-ebpf-types = { path = "../kite-ebpf-types" }
 
 aya = { workspace = true }
 aya-log = { workspace = true }
