--- a/kite/Cargo.toml
+++ b/kite/Cargo.toml
@@ -28,6 +28,8 @@ env_logger = "0.11.5"
 log = "0.4.22"
 num-traits = "0.2.19"
 metrics = "0.24.0"
+metrics-exporter-prometheus = { version = "0.16.0", features = ["http-listener"] }
+metrics-util = "0.18.0"
 
 [build-dependencies]
 cargo_metadata = { workspace = true }
