--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ cargo_metadata = { version = "0.18.0", default-features = false }
 which = { version = "6.0.0", default-features = false }
 libc = { version = "0.2.159", default-features = false }
 
-kube = { version = "0.96.0", features = ["runtime", "derive", "admission"] }
+kube = { version = "0.96.0", features = ["runtime", "derive", "admission", "rustls-tls"] }
 kube-core = "0.96.0"
 k8s-openapi = { version = "0.23.0", features = ["latest"] }
 
@@ -29,12 +29,6 @@ serde = "1"
 
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
-
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
 
 [profile.release.package.kite-ebpf]
 debug = 2
