--- a/kite-ebpf-types/Cargo.toml
+++ b/kite-ebpf-types/Cargo.toml
@@ -12,3 +12,9 @@ aya = { workspace = true, optional = true }
 
 [lib]
 path = "src/lib.rs"
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
