--- a/kite/Cargo.toml
+++ b/kite/Cargo.toml
@@ -30,6 +30,7 @@ num-traits = "0.2.19"
 metrics = "0.24.0"
 metrics-exporter-prometheus = { version = "0.16.0", features = ["http-listener"] }
 metrics-util = "0.18.0"
+rustls = "0.23.18"
 
 [build-dependencies]
 cargo_metadata = { workspace = true }
