Support IPv6 in the eBPF program

--- a/kite-ebpf/Cargo.toml
+++ b/kite-ebpf/Cargo.toml
@@ -8,6 +8,7 @@ kite-ebpf-types = { path = "../kite-ebpf-types", default-features = false, featu
 aya-ebpf = { workspace = true }
 aya-log-ebpf = { workspace = true }
 memoffset = "0.8"
+network-types = "0.0.7"
 
 [build-dependencies]
 which = { workspace = true }
