--- a/kite-ebpf/Cargo.toml
+++ b/kite-ebpf/Cargo.toml
@@ -14,10 +14,20 @@ network-types = "0.0.7"
 which = { workspace = true }
 
 [profile.dev]
+opt-level = 3
+debug = false
+debug-assertions = false
+overflow-checks = false
+lto = true
 panic = "abort"
+incremental = false
+codegen-units = 1
+rpath = false
 
 [profile.release]
+lto = "fat"
 panic = "abort"
+codegen-units = 1
 
 [[bin]]
 name = "kite"
